--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <h3>Education</h3>
   <ul>
     <li>SSLC - ST. Aloysius School</li>
-    <li>PUC - St. Aloysius PU College</li>
-    <li>B.COM - St. Aloysius Institute</li>
+    <li>PUC - ST. Aloysius PU College</li>
+    <li>B.COM - ST. Aloysius Institute</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
